--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1{
 }
 
 h2 {
- font-size: 24px;
+ font-size: 22px;
  margin-left: 30px;
 }
 
@@ -47,4 +47,11 @@ h2 {
 a{
  color: #d21034;
  line-height: 1.5;
+}
+
+button{
+background-color: #333333;
+border-radius: 10px;
+color: #eee;
+padding: 10px;
 }
